# rust-chat-api

./: Cargo.toml  Dockerfile  todo
src/: main.rs
src/addressee/: controller.rs  mod.rs
src/addressee/models/: addressee.rs  mod.rs
src/internal/: api_response.rs  cache.rs  mod.rs  token_guard.rs
src/models/: mod.rs  ws_message.rs
src/post/: controller.rs  mod.rs  routes.rs
src/post/models/: chat_room.rs  mod.rs
src/session/: controller.rs
