[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = {version = "0.5.1", features = ["json", "secrets"]}
rocket_ws = "0.1"
serde = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.13.1", features = ["v4", "fast-rng", "serde"]}
